dimensionamento com % e barra da direita tbm

--- a/html/index.html
+++ b/html/index.html
@@ -20,7 +20,7 @@
   <body>
     <div id="containerGeral">
       <div class="containerLateral">
-        <img src="../imagens/pintinhoRedondo.png" id="patinho" />
+        <img src="../imagens/pintinhoAndando.png" id="patinho" />
         <div id="containerPaginas">
           <a href="#" class="textoPaginas">
             <div class="paginasBotao" id="selecionada">
@@ -43,7 +43,35 @@
         </div>
       </div>
       <div class="containerCentral"><p>oi</p></div>
-      <div class="containerLateral"><p>oi</p></div>
+      <div class="containerLateral">
+        <form id="containerBusca">
+          <input type="text" placeholder="🔍 Buscar" id="busca" />
+        </form>
+        <div id="containerNoticias">
+          <h3 id="headerNoticias">Notícias</h3>
+          <div class="noticia">
+            <p class="textoNoticia">
+              Ucrânia pede mais sanções à Rússia; Putin diz que represálias
+              atuais já são semelhantes a "declaração de guerra”
+            </p>
+            <img src="../imagens/imagemNoticia.png" class="imagemNoticia" />
+          </div>
+          <div class="noticia">
+            <p class="textoNoticia">
+              Ucrânia pede mais sanções à Rússia; Putin diz que represálias
+              atuais já são semelhantes a "declaração de guerra”
+            </p>
+            <img src="../imagens/imagemNoticia.png" class="imagemNoticia" />
+          </div>
+          <div class="noticia">
+            <p class="textoNoticia">
+              Ucrânia pede mais sanções à Rússia; Putin diz que represálias
+              atuais já são semelhantes a "declaração de guerra”
+            </p>
+            <img src="../imagens/imagemNoticia.png" class="imagemNoticia" />
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
