visual prnto eu acho

--- a/html/index.html
+++ b/html/index.html
@@ -42,7 +42,100 @@
           </a>
         </div>
       </div>
-      <div class="containerCentral"><p>oi</p></div>
+      <div class="containerCentral">
+        <h1 id="titulo">Início</h1>
+        <div id="novoPiu">
+          <div class="imgETexto">
+            <img src="../imagens/cachorro.jpg" id="cachorro" />
+            <div class="textosPosts">
+              <p class="userEData">@username123</p>
+              <form id="formNovoPiu">
+                <input
+                  type="text"
+                  placeholder="O que deseja falar?"
+                  id="conteudoNovoPiu"
+                />
+              </form>
+            </div>
+          </div>
+          <button id="postarBotao">Postar</button>
+        </div>
+        <div class="piu">
+          <div class="imgETexto">
+            <img src="../imagens/cachorro.jpg" class="fotoPerfil" />
+            <div class="textosPosts">
+              <p class="userEData">@username123.data</p>
+              <p class="conteudoPost">Conteudo post</p>
+            </div>
+          </div>
+          <button class="ajustesPosts"><i class="fa-solid fa-gear"></i></button>
+          <div class="interacoes">
+            <button><i class="fa-solid fa-thumbs-up"></i></button>
+            <button><i class="fa-solid fa-comment-dots"></i></button>
+            <button><i class="fa-solid fa-retweet"></i></button>
+          </div>
+        </div>
+        <div class="piu">
+          <div class="imgETexto">
+            <img src="../imagens/cachorro.jpg" class="fotoPerfil" />
+            <div class="textosPosts">
+              <p class="userEData">@username123.data</p>
+              <p class="conteudoPost">Conteudo post</p>
+            </div>
+          </div>
+          <button class="ajustesPosts"><i class="fa-solid fa-gear"></i></button>
+          <div class="interacoes">
+            <button><i class="fa-solid fa-thumbs-up"></i></button>
+            <button><i class="fa-solid fa-comment-dots"></i></button>
+            <button><i class="fa-solid fa-retweet"></i></button>
+          </div>
+        </div>
+        <div class="piu">
+          <div class="imgETexto">
+            <img src="../imagens/cachorro.jpg" class="fotoPerfil" />
+            <div class="textosPosts">
+              <p class="userEData">@username123.data</p>
+              <p class="conteudoPost">Conteudo post</p>
+            </div>
+          </div>
+          <button class="ajustesPosts"><i class="fa-solid fa-gear"></i></button>
+          <div class="interacoes">
+            <button><i class="fa-solid fa-thumbs-up"></i></button>
+            <button><i class="fa-solid fa-comment-dots"></i></button>
+            <button><i class="fa-solid fa-retweet"></i></button>
+          </div>
+        </div>
+        <div class="piu">
+          <div class="imgETexto">
+            <img src="../imagens/cachorro.jpg" class="fotoPerfil" />
+            <div class="textosPosts">
+              <p class="userEData">@username123.data</p>
+              <p class="conteudoPost">Conteudo post</p>
+            </div>
+          </div>
+          <button class="ajustesPosts"><i class="fa-solid fa-gear"></i></button>
+          <div class="interacoes">
+            <button><i class="fa-solid fa-thumbs-up"></i></button>
+            <button><i class="fa-solid fa-comment-dots"></i></button>
+            <button><i class="fa-solid fa-retweet"></i></button>
+          </div>
+        </div>
+        <div class="piu">
+          <div class="imgETexto">
+            <img src="../imagens/cachorro.jpg" class="fotoPerfil" />
+            <div class="textosPosts">
+              <p class="userEData">@username123.data</p>
+              <p class="conteudoPost">Conteudo post</p>
+            </div>
+          </div>
+          <button class="ajustesPosts"><i class="fa-solid fa-gear"></i></button>
+          <div class="interacoes">
+            <button><i class="fa-solid fa-thumbs-up"></i></button>
+            <button><i class="fa-solid fa-comment-dots"></i></button>
+            <button><i class="fa-solid fa-retweet"></i></button>
+          </div>
+        </div>
+      </div>
       <div class="containerLateral">
         <form id="containerBusca">
           <input type="text" placeholder="🔍 Buscar" id="busca" />
