--- a/html/index.html
+++ b/html/index.html
@@ -50,9 +50,10 @@
             <div class="textosPosts">
               <p class="userEData">@username123</p>
               <form id="formNovoPiu">
-                <input placeholder="O que deseja falar?" id="conteudoNovoPiu"></input>
+                <input placeholder="O que deseja falar?" id="conteudoNovoPiu" oninput="contarCaracteres()"></input>
               </form>
             </div>
+            <p id="contadorCaracter">0/140</p>
           </div>
           <button id="postarBotao" onclick=postar() >Postar</button>
         </div>
@@ -165,52 +166,4 @@
     <script src="../javascript/index.js"></script>
   </body>
 </html>
-=======
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto:wght@700&display=swap"
-      rel="stylesheet"
-    />
-    <script
-      src="https://kit.fontawesome.com/325e65df89.js"
-      crossorigin="anonymous"
-    ></script>
-    <title>Document</title>
-  </head>
-  <body>
-    <div id="containerGeral">
-      <div class="containerLateral">
-        <img src="../imagens/pintinhoRedondo.png" id="patinho" />
-        <div id="containerPaginas">
-          <a href="#" class="textoPaginas">
-            <div class="paginasBotao" id="selecionada">
-              <i class="fa-solid fa-house"></i>
-              <h2>Início</h2>
-            </div>
-          </a>
-          <a href="#" class="textoPaginas">
-            <div class="paginasBotao">
-              <i class="fa-solid fa-circle-user"></i>
-              <h2>Perfil</h2>
-            </div>
-          </a>
-          <a href="#" class="textoPaginas">
-            <div class="paginasBotao">
-              <i class="fa-solid fa-gear"></i>
-              <h2>Opções</h2>
-            </div>
-          </a>
-        </div>
-      </div>
-      <div class="containerCentral"><p>oi</p></div>
-      <div class="containerLateral"><p>oi</p></div>
-    </div>
-  </body>
-</html>
->>>>>>> 49662827cfb14f8156918627e0c0db2730955b55
+
