--- a/html/index.html
+++ b/html/index.html
@@ -49,7 +49,7 @@
             <img src="../imagens/cachorro.jpg" id="cachorro" />
             <div class="textosPosts">
               <p class="userEData">@username123</p>
-              <form id="formNovoPiu">
+              <form id="formNovoPiu" >
                 <input placeholder="O que deseja falar?" id="conteudoNovoPiu" oninput="contarCaracteres()"></input>
               </form>
             </div>
@@ -57,6 +57,7 @@
           </div>
           <button id="postarBotao" onclick=postar() >Postar</button>
         </div>
+      </div>
       <div class="containerLateral">
         <form id="containerBusca">
           <input type="text" placeholder="🔍 Buscar" id="busca" />
