--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
       src="https://kit.fontawesome.com/325e65df89.js"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <title>Piupiuwer</title>
   </head>
   <body>
     <div id="containerGeral">
