--- a/html/index.html
+++ b/html/index.html
@@ -51,6 +51,7 @@
               <p class="userEData">@username123</p>
               <form id="formNovoPiu" >
                 <input placeholder="O que deseja falar?" id="conteudoNovoPiu" oninput="contarCaracteres()"></input>
+                <submit border="1px solid red"></submit>
               </form>
             </div>
             <p id="contadorCaracter">0/140</p>
